--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
+    "slugify": "^1.3.6",
     "style-loader": "1.0.0",
     "styled-components": "^4.4.1",
     "swiper": "^5.2.0",
