--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_PATH=./src
-REACT_APP_ENV='development'
-REACT_APP_API_URL=https://voda-react-assessment.herokuapp.com/
+REACT_APP_ENV='production'
+REACT_APP_API_URL=http://mars.theblueground.net/api
 
